@@ -2,6 +2,7 @@
 ++ Released on 2017-
 +++++++++++++++++++++++++
 - ClientConfig can now (optionally) manage settings for different contexts [#4/#112]
+- Media fields (image/file) now prefix the media source url [#124]
 - Updated minimum requirements to PHP 5.5.0 and MODX 2.5.2.
 
 ++ ClientConfig 1.4.2-pl
